--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -613,6 +613,9 @@ strong {
 
 section img {
   max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 blockquote {
@@ -784,7 +787,7 @@ section {
   max-width: 650px;
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
-  margin-top: 70px;
+  margin-top: 10px;
 }
 section #title {
   border: 0;
